Budget Planner/force-app/main/default/objects/Budget_Category__c/Budget_Category__c.object-meta.xml
<CustomObject>
    <label>Budget Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>