Budget Planner/force-app/main/default/objects/Budget_Category__c/fields/Balance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Balance_Cost__c</fullName>
    <formula>Cost__c  -  Total_Expense_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>