Budget Planner/force-app/main/default/objects/Budget_Category__c/fields/Total_Expense_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Cost__c</fullName>
    <label>Total Expense Cost</label>
    <summarizedField>Budget_Category_Expense__c.Cost__c</summarizedField>
    <summaryForeignKey>Budget_Category_Expense__c.Budget_Category__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>